src/test/resources/plang-strict/parse-error/014_no_operator.plang
**#No + operator defined between string and integer
**FirstErrorLoc:7,16
Program testing
  Változók:
    a: Szöveg

  a := "12345" + 6
program_vége
